# DungeonGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DerivedData/DungeonGame/: info.plist
DerivedData/DungeonGame/Logs/Debug/: 9763C253-1692-4406-B369-ED7CD788EEDF.xcactivitylog  LogStoreManifest.plist
DerivedData/DungeonGame/Logs/Issues/: 072D9520-BDDD-4455-A75F-49F90BC5B6E2.xcactivitylog  LogStoreManifest.plist
DerivedData/DungeonGame/TextIndex/: TextFragmentIndex-v7.idx
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DungeonGame/: Enemy.cpp  Inventory.cpp  Inventory.h  Item.cpp  Item.hpp  Player.cpp  creature.cpp  creature.hpp  draw.cpp  enemy.cpp  enemy.hpp  engine.cpp  engine.hpp  input.cpp  main.cpp  map.cpp  map.hpp  menu.cpp  menu.hpp  myarray.hpp  player.cpp  player.hpp  save1.txt  save3.txt  save4.txt  sf-entity.cpp  sf-entity.hpp  sf-item.cpp  sf-item.hpp  undead.cpp  undead.hpp  view.h
DungeonGame.xcodeproj/: project.pbxproj
DungeonGame.xcodeproj/xcshareddata/xcschemes/: DungeonGame.xcscheme
DungeonGame.xcodeproj/xcuserdata/ivanyakovenko.xcuserdatad/xcschemes/: xcschememanagement.plist
DungeonGame/Engine/: draw.cpp  engine.cpp  engine.hpp  input.cpp  main-save.cpp  update.cpp
Google_tests/: CMakeLists.txt  PlayerTests.cpp
core/: engine.cpp  engine.hpp  map.cpp  map.hpp  menu.cpp  menu.hpp
extra/: init.txt  map.tmx  save2.txt
graphics/: sf-entity.cpp  sf-entity.hpp  sf-item.cpp  sf-item.hpp
player/: creature.cpp  creature.hpp  enemy.cpp  enemy.hpp  game-item.cpp  game-item.hpp  player.cpp  player.hpp  undead.cpp  undead.hpp
(+204 files in other folders)
